// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CvLoading should render correctly when active, small and not overlayed 1`] = `
<cv-wrapper-stub tagtype="" class="cv-loading">
  <div data-loading="" class="cv-loading bx--loading bx--loading--small"><label class="bx--visually-hidden">
      Loading
    </label> <svg viewBox="0 0 100 100" class="bx--loading__svg">
      <title>Loading</title>
      <circle cx="50%" cy="50%" r="42" class="bx--loading__background"></circle>
      <circle cx="50%" cy="50%" r="42" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;

exports[`CvLoading should render correctly when active, small and overlayed 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-loading bx--loading-overlay">
  <div data-loading="" class="bx--loading bx--loading--small"><label class="bx--visually-hidden">
      Loading
    </label> <svg viewBox="0 0 100 100" class="bx--loading__svg">
      <title>Loading</title>
      <circle cx="50%" cy="50%" r="42" class="bx--loading__background"></circle>
      <circle cx="50%" cy="50%" r="42" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;

exports[`CvLoading should render correctly when active, with normal size and not overlayed 1`] = `
<cv-wrapper-stub tagtype="" class="cv-loading">
  <div data-loading="" class="cv-loading bx--loading"><label class="bx--visually-hidden">
      Loading
    </label> <svg viewBox="0 0 100 100" class="bx--loading__svg">
      <title>Loading</title>
      <!---->
      <circle cx="50%" cy="50%" r="44" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;

exports[`CvLoading should render correctly when active, with normal size and overlayed 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-loading bx--loading-overlay">
  <div data-loading="" class="bx--loading"><label class="bx--visually-hidden">
      Loading
    </label> <svg viewBox="0 0 100 100" class="bx--loading__svg">
      <title>Loading</title>
      <!---->
      <circle cx="50%" cy="50%" r="44" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;

exports[`CvLoading should render correctly when not active, small and not overlayed 1`] = `
<cv-wrapper-stub tagtype="" class="cv-loading">
  <div data-loading="" class="cv-loading bx--loading--small"><label class="bx--visually-hidden">
      Loading
    </label> <svg viewBox="0 0 100 100" class="bx--loading__svg">
      <title>Loading</title>
      <circle cx="50%" cy="50%" r="42" class="bx--loading__background"></circle>
      <circle cx="50%" cy="50%" r="42" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;

exports[`CvLoading should render correctly when not active, small and overlayed 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-loading bx--loading-overlay--stop">
  <div data-loading="" class="bx--loading--small"><label class="bx--visually-hidden">
      Loading
    </label> <svg viewBox="0 0 100 100" class="bx--loading__svg">
      <title>Loading</title>
      <circle cx="50%" cy="50%" r="42" class="bx--loading__background"></circle>
      <circle cx="50%" cy="50%" r="42" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;

exports[`CvLoading should render correctly when not active, with normal size and not overlayed 1`] = `
<cv-wrapper-stub tagtype="" class="cv-loading">
  <div data-loading="" class="cv-loading"><label class="bx--visually-hidden">
      Loading
    </label> <svg viewBox="0 0 100 100" class="bx--loading__svg">
      <title>Loading</title>
      <!---->
      <circle cx="50%" cy="50%" r="44" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;

exports[`CvLoading should render correctly when not active, with normal size and overlayed 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-loading bx--loading-overlay--stop">
  <div data-loading="" class=""><label class="bx--visually-hidden">
      Loading
    </label> <svg viewBox="0 0 100 100" class="bx--loading__svg">
      <title>Loading</title>
      <!---->
      <circle cx="50%" cy="50%" r="44" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;
